--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-8">Windows Lite сборки</a>
         <a href="https://donatello.to/finework" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-9" target="_blank">Поддержать гривной</a>
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-10">Софт от Аддерли</a>
+        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-7 u-radius-50 u-btn-11">Советы по использованию</a>
+        <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-12">Новости</a>
       </div>
     </section>
     <section class="u-black u-clearfix u-section-2" id="sec-f0ab">
@@ -138,7 +140,7 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-32-md u-size-32-sm u-size-32-xs u-size-36-lg u-size-36-xl u-layout-cell-1">
-                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                <div class="u-container-layout u-valign-bottom-xs u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-1">
                   <h2 class="u-text u-text-default u-text-1">Мои социальные сети.</h2>
                   <p class="u-text u-text-2">Можешь подписаться на несколько моих каналов YouTube и Telegram.<br>А так же, глянуть другие платформы.
                   </p>
