--- a/Новости.html
+++ b/Новости.html
@@ -65,6 +65,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li></ul>
 </div>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Новости.html" style="padding: 10px 20px;">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
@@ -92,6 +93,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li></ul>
 </div>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
@@ -114,7 +116,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Новости Аддерли</h1>
         <h5 class="u-text u-text-default u-text-2">Дата: 10.08.2022</h5>
-        <h3 class="u-align-center u-text u-text-default u-text-3">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
+        <h3 class="u-align-center u-text u-text-3">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
           <br>Я планирую сделать Windows 8.1 V5, Windows 7 V4, и 8.0 V2, в которых я обновлю выбор браузеров, и других программ, по просьбе людей.<br>
           <br>Windows 10 и 11, я планирую больше не заниматься, так как Windows 11 довольно трудно у меня собиралась, и на это уходило слишком много времени, а Windows 10 просто для меня не любимая система, и сборки которые я сделал уже идеально готовы для использования, единственное главное правило - Нужно ставить с интернетом.<br>
           <br>А еще, в моих планах сделать Windows 8.1 Mini, и Windows 8.0 Mini, которые будут весить меньше 5 GB, и они будут юзабельны.<br>
