--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li></ul>
 </div>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Новости.html" style="padding: 10px 20px;">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
@@ -95,6 +96,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li></ul>
 </div>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
@@ -128,14 +130,16 @@
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-6">Сборки Windows 11</a>
         <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-7">Windows Lite x32 сборки</a>
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-8">Windows Lite сборки</a>
-        <a href="https://donatello.to/finework" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-9" target="_blank">Поддержать гривной</a>
-        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-10">Софт от Аддерли</a>
+        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-9">Софт от Аддерли</a>
+        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-10">Старые Windows</a>
         <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-7 u-radius-50 u-btn-11">Советы по использованию</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-12">Новости</a>
+        <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-13" target="_blank">Предложить идею / Оставить отзыв</a>
+        <a href="https://donatello.to/adderly" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-14" target="_blank">Поддержать Автора сборок</a>
       </div>
     </section>
     <section class="u-black u-clearfix u-section-2" id="sec-f0ab">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
