--- a/index.html
+++ b/index.html
@@ -135,11 +135,12 @@
         <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-7 u-radius-50 u-btn-11">Советы по использованию</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-12">Новости</a>
         <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-13" target="_blank">Предложить идею / Оставить отзыв</a>
-        <a href="https://donatello.to/adderly" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-14" target="_blank">Поддержать Автора сборок</a>
+        <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-14" target="_blank">По поводу uTorrent раздач</a>
+        <a href="https://donatello.to/adderly" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-15" target="_blank">Поддержать Автора сборок</a>
       </div>
     </section>
     <section class="u-black u-clearfix u-section-2" id="sec-f0ab">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
