--- a/Новости.html
+++ b/Новости.html
@@ -115,8 +115,11 @@
     <section class="u-clearfix u-palette-1-dark-1 u-section-1" id="sec-f077">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Новости Аддерли</h1>
-        <h5 class="u-text u-text-default u-text-2">Дата: 10.08.2022</h5>
-        <h3 class="u-align-center u-text u-text-3">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
+        <h5 class="u-text u-text-default u-text-2">Дата: 11.08.2022</h5>
+        <h3 class="u-text u-text-3">Всем снова привет! Я решил попробовать открыть раздачу торрента Windows 11, но к сожалению у меня проблема с тем, что именно я раздавать не могу, и нужно чтобы это делал кто-то другой.<br>
+        </h3>
+        <h5 class="u-text u-text-default u-text-4">Дата: 10.08.2022</h5>
+        <h3 class="u-text u-text-5">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
           <br>Я планирую сделать Windows 8.1 V5, Windows 7 V4, и 8.0 V2, в которых я обновлю выбор браузеров, и других программ, по просьбе людей.<br>
           <br>Windows 10 и 11, я планирую больше не заниматься, так как Windows 11 довольно трудно у меня собиралась, и на это уходило слишком много времени, а Windows 10 просто для меня не любимая система, и сборки которые я сделал уже идеально готовы для использования, единственное главное правило - Нужно ставить с интернетом.<br>
           <br>А еще, в моих планах сделать Windows 8.1 Mini, и Windows 8.0 Mini, которые будут весить меньше 5 GB, и они будут юзабельны.<br>
