--- a/Софт-от-Аддерли.html
+++ b/Софт-от-Аддерли.html
@@ -146,6 +146,7 @@
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Geometry_Dash_v2.112.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-24">Geometry Dash 2.1</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/counter-strike-condition-zero-deleted-scenes.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-25">Counter Strike Condition Zero Deleted Scenes</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/CSS.exe.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-26">Counter Strike Source V92</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/driver-hub-install__28.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-27">DriverHub</a>
         <h2 class="u-align-center-xl u-text u-text-white u-text-2">Пароль на архивы - 1111</h2>
         <h5 class="u-align-center-xl u-text u-text-white u-text-3">Все что здесь на странице, находится так же в открытом доступе в Интернете.<br>Автор этих репаков, не автор сайта!
         </h5>
