--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -134,7 +134,7 @@
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-8">Windows Lite сборки</a>
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-9">Софт от Аддерли</a>
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-10">Старые Windows</a>
-        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-11">[НОВИНКА] Сборки Windows Mini</a>
+        <a href="Windows-Mini-сборки.html" data-page-id="751803690" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-11">[НОВИНКА] Сборки Windows Mini</a>
         <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-7 u-radius-50 u-btn-12">Советы по использованию</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-13">Новости</a>
         <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-14" target="_blank">Предложить идею / Оставить отзыв</a>
