--- a/Старые-версии-Windows.html
+++ b/Старые-версии-Windows.html
@@ -71,6 +71,8 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
@@ -100,6 +102,8 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -120,7 +124,7 @@
         <h1 class="u-text u-text-default u-text-1">Старые Windows</h1>
         <h2 class="u-text u-text-default u-text-2">MediaFire</h2>
         <h2 class="u-text u-text-default u-text-3">Google Drive</h2>
-        <a href="https://nicepage.com/website-builder" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-1">Windows 3.11</a>
+        <a href="https://drive.google.com/file/d/1_1mZyTvBIoVrkdUpMIpWw1oc1UKy_GjS/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-1">Windows 3.11</a>
         <a href="https://www.mediafire.com/file/kfbq1o20wkxm27o/1Windows+3.11.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-2">Windows 3.11</a>
         <a href="https://www.mediafire.com/file/56jrc0h5feaobwv/2Windows_95.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-3">Windows 95</a>
         <a href="https://drive.google.com/file/d/16suERWqPlyHnuYH0A8qQ58qERsgxYazq/view" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-4">Windows NT 4.0</a>
