--- a/Длительность-установки-сборок.html
+++ b/Длительность-установки-сборок.html
@@ -71,6 +71,8 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
@@ -100,6 +102,8 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -125,11 +129,11 @@
         </p>
         <h1 class="u-align-center u-text u-text-white u-text-5">Длительность установки на SSD:<br>(с помощью эмуляции)
         </h1>
-        <h4 class="u-align-center u-text u-text-white u-text-6"> Длительность установки Windows 11 V2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 20 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 16 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 18 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 17 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 11 ​Мин.<br>Длительности установки Windows 8.0  by Adderly на SSD - 14 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 16 ​Мин.<br>Длительности установки Windows 8.0 Mini by Adderly на SSD - 7 ​Мин.<br>
+        <h4 class="u-align-center u-text u-text-white u-text-6"> Длительность установки Windows 11 V2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 20 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 16 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 18 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 17 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 11 ​Мин.<br>Длительности установки Windows 8.0  by Adderly на SSD - 14 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 16 ​Мин.<br>Длительности установки Windows 8.0 Mini by Adderly на SSD - 7 ​Мин.<br>Длительности установки Windows 7 Mini by Adderly на SSD - 5 ​Мин 20с.<br>
         </h4>
         <h1 class="u-align-center u-text u-text-white u-text-7">Длительность установки на SSD:<br>(с помощью флешки)
         </h1>
-        <h4 class="u-align-center u-text u-text-white u-text-8"> Длительность установки Windows 11 V2 by Adderly на SSD - 7 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 9 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 10 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 8 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 8 Мин.<br> Длительности установки Windows 8.0  by Adderly на SSD - 6 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 9 Мин.<br>Длительности установки Windows 8.0 Mini by Adderly на SSD - 4 ​Мин.<br>
+        <h4 class="u-align-center u-text u-text-white u-text-8"> Длительность установки Windows 11 V2 by Adderly на SSD - 7 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 9 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 10 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 8 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 8 Мин.<br> Длительности установки Windows 8.0  by Adderly на SSD - 6 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 9 Мин.<br>Длительности установки Windows 8.0 Mini by Adderly на SSD - 4 ​Мин.<br>Длительности установки Windows 7 Mini by Adderly на SSD - 3 Мин.<br>
         </h4>
       </div>
     </section>
