--- a/Новости.html
+++ b/Новости.html
@@ -119,13 +119,22 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-palette-1-dark-1 u-section-1" id="sec-f077">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Новости Аддерли</h1>
-        <h5 class="u-text u-text-default u-text-2">Дата: 11.08.2022</h5>
-        <h3 class="u-text u-text-3">Всем снова привет! Я решил попробовать открыть раздачу торрента Windows 11, но к сожалению у меня проблема с тем, что именно я раздавать не могу, и нужно чтобы это делал кто-то другой.<br>
+        <h5 class="u-text u-text-default u-text-2">Дата: 13.08.2022</h5>
+        <h3 class="u-text u-text-3"> 400 Человек! <br>
+          <br>И статистика сайта взлетела до небес! <br>За 11 и 12 августа пришло 30 новых человек! <br>
+          <br>Такой статистики не было давно, хоть и на этой неделе я про сайт говорил только на своем YouTube канале. <br>
+          <br>Сайт я создал сайт 22 июня, благодаря своему другу igroman255, он мне подсказал как начать. <br>
+          <br>А еще в далеком мае, я делал совсем стыдные сборки (которые кстати вверху этого канала), и даже не думал что смогу зайти так далеко! <br>
+          <br>Спасибо всем за то что вы пользуетесь моими сборками, и я бы хотел попросить вас рассказать о моих сборках своим друзьям или товарищам, давайте до конца лета 500 пользователей наберем :)
         </h3>
-        <h5 class="u-text u-text-default u-text-4">Дата: 10.08.2022</h5>
-        <h3 class="u-text u-text-5">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
+        <img class="u-expanded-width u-image u-image-default u-image-1" src="images/photo_2022-08-13_11-24-47.jpg" alt="" data-image-width="713" data-image-height="369">
+        <h5 class="u-text u-text-default u-text-4">Дата: 11.08.2022</h5>
+        <h3 class="u-text u-text-5">Всем снова привет! Я решил попробовать открыть раздачу торрента Windows 11, но к сожалению у меня проблема с тем, что именно я раздавать не могу, и нужно чтобы это делал кто-то другой.<br>
+        </h3>
+        <h5 class="u-text u-text-default u-text-6">Дата: 10.08.2022</h5>
+        <h3 class="u-text u-text-7">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
           <br>Я планирую сделать Windows 8.1 V5, Windows 7 V4, и 8.0 V2, в которых я обновлю выбор браузеров, и других программ, по просьбе людей.<br>
           <br>Windows 10 и 11, я планирую больше не заниматься, так как Windows 11 довольно трудно у меня собиралась, и на это уходило слишком много времени, а Windows 10 просто для меня не любимая система, и сборки которые я сделал уже идеально готовы для использования, единственное главное правило - Нужно ставить с интернетом.<br>
           <br>А еще, в моих планах сделать Windows 8.1 Mini, и Windows 8.0 Mini, которые будут весить меньше 5 GB, и они будут юзабельны.<br>
