--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -123,30 +123,29 @@
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-b057" data-image-width="3840" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">Сборки Windows 8.1</h1>
-        <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 Pro V4 by Adderly (27.06.2022)<br>
+        <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 Pro V5 by Adderly (14.08.2022)<br>
         </h6>
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows8.xx64-2022-06-24-14-05-36.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows8.xx64-2022-06-24-14-06-58.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows8.xx64-2022-06-24-14-05-31.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows8.xx64-2022-06-24-14-06-06.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows8.1ByAdderly-2022-08-14-12-47-15.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows8.1ByAdderly-2022-08-14-12-47-53.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows8.1ByAdderly-2022-08-14-12-48-10.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows8.1ByAdderly-2022-08-14-12-48-18.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-align-center-xl u-text u-text-body-alt-color u-text-3"> Сборка обновлена до Update 3 <br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ<br>
-          <br>Удалены приложения<br>"Финансы, Еда и напитки, Здоровье и фитнесс, Карты, Новости,<br>Спорт, Путешествия, Погода, Помощь и подсказки, Ридер, Скайп, Будильник,<br>Запись звука, Xbox Live Games, Zune, Сканер, Почта, Люди"&nbsp;<br>
           <br>Интегрирован Framework 4.8, 4.7.2, 3.0, 2.0<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
-          <br>Включен DirectPLay<br>&nbsp;<br>Отключен Internet Explorer<br>Отключен Media Player<br>(по желанию можно вернуть)<br>
+          <br>Включен DirectPLay<br>
           <br>Добавлены темы "Архитектура, Персонажи, Лашдафты" из Windows 7 <br>
           <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.0, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
-          <br>Удалены файлы гибернации, и файла подкачки <br>
+          <br>Выключен файл подкачки<br>
           <br>Ключ - GCRJD-8NW9H-F2CDX-CCM8D-9D6T9 <br>
-          <br>Образ весит 5.23 GB, после установки Windows занимает 14 GB. <br>
+          <br>Образ весит 5.25 GB, после установки Windows занимает 14 GB. <br>
           <br>Образ основан на официальном MSDN Windows 8.1.<br>
         </p>
-        <a href="https://drive.google.com/file/d/1Z0ruubtC0Bayk3yf_5o3uE0imnDBYiGa/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Pro V4 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/0qut2q27ah8c3dn/Windows+8.1+V4+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.1 Pro V4 by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/1eZLLMnePDVEsdk8y277XSLM38r_gKSl-/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Pro V5 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/o0h7xgtzxdlt6c9/Windows+8.1+V5+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.1 Pro V5 by Adderly [MediaFire]</a>
         <p class="u-text u-text-body-alt-color u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
@@ -156,8 +155,8 @@
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-57a1">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
-        <a href="https://drive.google.com/file/d/1Z0ruubtC0Bayk3yf_5o3uE0imnDBYiGa/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hidden-lg u-hidden-xl u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank"> Скачать Windows 8.1 Pro V4 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/0qut2q27ah8c3dn/Windows+8.1+V4+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.1 Pro V4 by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/1eZLLMnePDVEsdk8y277XSLM38r_gKSl-/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hidden-lg u-hidden-xl u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank"> Скачать Windows 8.1 Pro V5 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/o0h7xgtzxdlt6c9/Windows+8.1+V5+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.1 Pro V5 by Adderly [MediaFire]</a>
       </div>
     </section>
     
