--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -123,28 +123,28 @@
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 7</h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V3 by Adderly (25.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V4 by Adderly (14.08.2022)<br>
         </h6>
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7x64-2022-06-25-21-06-33.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows7x64-2022-06-25-21-16-57.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7ByAdderly-2022-08-14-13-01-20.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows7ByAdderly-2022-08-14-13-01-371.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows7x64-2022-06-25-21-17-101.png" alt="" data-image-width="673" data-image-height="335">
-        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows7x64-2022-06-25-21-17-371.png" alt="" data-image-width="524" data-image-height="298">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7x64-2022-06-25-21-18-47.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7x64-2022-06-25-21-18-59.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-4" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7ByAdderly-2022-08-14-13-08-06.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7ByAdderly-2022-08-14-13-08-29.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-align-center-xl u-text u-text-white u-text-3"> Обновления на 2011 год. (Service Pack 1) <br>
           <br>Добавлен активатор.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Добавлены темы Windows 8.1, и 10 (по желанию можно удалить)&nbsp;<br>Добавлены темы с обоями Windows Vista, 11<br>
-          <br>Отключены игры <br>Отключён Internet Explorer <br>Отключены компоненты для работы с мультимедиа "Media Center, Media Player"&nbsp;<br>Отключены компоненты планшетного пк<br>Отключены гаджеты <br>(по желанию можно вернуть) <br>
+          <br>Отключены гаджеты&nbsp;(по желанию можно вернуть)&nbsp;<br>
+          <br> Отключен файл подкачки<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
-          <br>Так же добавлена папка "Темы" в которой можно все более подробно настроить, и сделать Windows 7 похожей на 8 или 10<br>
-          <br>Образ весит 4.33 GB, после установки Windows занимает 12.4 GB. <br>
+          <br>Образ весит 4.36 GB, после установки Windows занимает 13 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
-        <a href="https://drive.google.com/file/d/1JNkPowcstxkiC98wLjuzKDUQpeZQzFM3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V3 by Adderly [Google Drive]</a>
-        <a href="http://www.mediafire.com/file/6dpnjoyyz5nhuau/Windows_7_V3_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V3 by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/10Csshuj0iVTErlJo2bcOIF0RyjysDbna/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V4 by Adderly [Google Drive]</a>
+        <a href="http://www.mediafire.com/file/42n7998yhianu6f/Windows_7_V4_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V4 by Adderly [MediaFire]</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 7 Ultimate V3.1 by Adderly (27.07.2022)<br>
         </h6>
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows7x64-2022-07-27-01-29-34.png" alt="" data-image-width="1366" data-image-height="768">
@@ -158,9 +158,9 @@
           <br>Добавлены темы с обоями Windows Vista, 11, 8.0<br>
           <br>Отключены игры <br>Отключён Internet Explorer <br>Отключены компоненты для работы с мультимедиа "Media Center, Media Player"&nbsp;<br>Отключены компоненты планшетного пк<br>Отключены гаджеты <br>(по желанию можно вернуть) <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
-          <br>Образ весит 4.33 GB (столько же сколько и 3.0), после установки Windows занимает 14.5 GB. <br>
+          <br>Образ весит 4.33 GB, после установки Windows занимает 14.5 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.<br>
-          <br>Немного изменено содержимое папок "Браузеры, плееры, и архиваторы"<br>В отличии от 3.0, нет никаких тем.
+          <br>В отличии от 3.0, нет никаких тем.
         </p>
         <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
         <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
@@ -172,8 +172,8 @@
     <section class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-17f1">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
-        <a href="https://drive.google.com/file/d/1JNkPowcstxkiC98wLjuzKDUQpeZQzFM3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V3 by Adderly [Google Drive]</a>
-        <a href="http://www.mediafire.com/file/6dpnjoyyz5nhuau/Windows_7_V3_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V3 by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/10Csshuj0iVTErlJo2bcOIF0RyjysDbna/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V4 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/42n7998yhianu6f/Windows+7+V4+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V4 by Adderly [MediaFire]</a>
         <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
       </div>
     </section>
